integrates/back/deploy/dev/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrates-${CI_COMMIT_REF_NAME}
  namespace: dev
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: integrates-${CI_COMMIT_REF_NAME}
  template:
    metadata:
      labels:
        app: integrates-${CI_COMMIT_REF_NAME}
        # This ensures that the resource is updated on every apply
        uuid: ${UUID}
    spec:
      serviceAccountName: dev
      nodeSelector:
        worker_group: dev
      terminationGracePeriodSeconds: 60
      containers:
        - name: back
          image: ghcr.io/fluidattacks/makes/arm64:latest@sha256:1ffac6f1a53559d6c8f12ba084b969acfb76dd65289d1b7db2816cbbdc5b367c
          imagePullPolicy: Always
          command: [sh]
          args:
            - -c
            - m gitlab:fluidattacks/universe@${CI_COMMIT_SHA} /integrates/storage/dev;
              m gitlab:fluidattacks/universe@${CI_COMMIT_SHA} /integrates/back/deploy/probes/liveness;
              m gitlab:fluidattacks/universe@${CI_COMMIT_SHA} /integrates/back/deploy/probes/readiness;
              m gitlab:fluidattacks/universe@${CI_COMMIT_SHA} /integrates/back eph
          resources:
            requests:
              cpu: 600m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 5000Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
          ports:
            - containerPort: 8001
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - ~/.cache/makes/out-integrates-back-deploy-probes-readiness/bin/* dev FluidIntegrates
                  http://localhost:8001
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
            timeoutSeconds: 60
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - ~/.cache/makes/out-integrates-back-deploy-probes-liveness/bin/* dev FluidIntegrates
                  http://localhost:8001 https://${CI_COMMIT_REF_NAME}.app.fluidattacks.com
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
            timeoutSeconds: 60
        - name: db
          image: ghcr.io/fluidattacks/makes/arm64:latest
          imagePullPolicy: Always
          command: [m]
          args:
            - gitlab:fluidattacks/universe@${CI_COMMIT_SHA}
            - /integrates/db
          resources:
            requests:
              cpu: 600m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 3000Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
          readinessProbe:
            exec:
              command:
                - cat
                - /tmp/ready
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
            timeoutSeconds: 60
