integrates/back/deploy/dev/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: integrates-${CI_COMMIT_REF_NAME}
  namespace: dev
spec:
  type: NodePort
  ports:
    - name: integrates
      port: 81
      targetPort: 8001
      protocol: TCP
  selector:
    app: integrates-${CI_COMMIT_REF_NAME}
